syntax = "proto3";

option csharp_namespace = "Proto.V1";

import "base.proto";

message TaskAddedProto {
  BaseProto base = 1;
  string publicId = 5;
  string poPugId = 6;
  int64 time = 7;
}